--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>Rex</h2>
         <p>Breed: Labrador</p>
         <p>Contact: +374 91 123456</p>
-        <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://petsafe.am/dog1.html&size=100x100" alt="QR Code">
+        <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://matemil888.github.io/petsafe-site/dog1.html&size=100x100" alt="QR Code">
         <p><a href="dog1.html">View Profile</a></p>
     </div>
     
@@ -21,7 +21,7 @@
         <h2>Bella</h2>
         <p>Breed: Beagle</p>
         <p>Contact: +374 93 654321</p>
-        <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://petsafe.am/dog2.html&size=100x100" alt="QR Code">
+        <img src="https://api.qrserver.com/v1/create-qr-code/?data=https://matemil888.github.io/petsafe-site/dog2.html&size=100x100" alt="QR Code">
         <p><a href="dog2.html">View Profile</a></p>
     </div>
     
